syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.crumbs.recipeservice.grpc";

service LogService {
  rpc log(ActionRequest) returns (ActionResponse);
}

message ActionRequest {
  string serviceName = 1;
  string resourceName = 2;
  string method = 3;
  string responseStatus = 4;
}

message ActionResponse {
  string responseMessage = 1;
}